svn
^^^
	+ Disabled the options for removing shared files when uninstalling a
	  package, both in porg and grop. Now shared files are never removed,
	  as it ougth to be.
	+ Disabled support for missing files.
	+ grop: Removed support for gzip/bzip and stripping of libraries.
	+ grop: Replaced menu option "Unselect all" by the more standard 
	  "Invert selection" on the files popup menu.

2.0.9
^^^^^
	+ Fixed minor bug in Grop.


2.0.8 [26 June 2010]
^^^^^^^^^^^^^^^^^^^^
	+ Grop: Change column visibility when clicking on Preferences
	  buttons. Changed some icons for some menu items, to a more
	  intuitive ones.
	+ Porgball: Removed option --fakeroot (too cryptic).
	+ Porg: Removed option --ignore-shared.
	+ Auxiliary scripts are now installed by default, and may be
	  disabled with --disable-scripts.


2.0.7 [30 Aug 2009]
^^^^^^^^^^^^^^^^^^^
	+ Simplified debug messages when logging packages.
	+ Fixed compilation error in Ubuntu (thanks Jerry Jacobs :-)
	+ [grop] Removed "Import RPM" feature.
	+ [grop] Fix package selection issues in the main window.
	+ [grop] Removed "Update" option in package popup menus.
	+ [grop] Added menu "Package" in the main window.


2.0.6 [9 Oct 2008]
^^^^^^^^^^^^^^^^^^
	Changes in grop:
	
	+ Moved configuration file from ~/.groprc to ~/.config/grop/groprc.
	+ Enhanced performance and fixed some minor bugs.


2.0.5 [27 Aug 2008]
^^^^^^^^^^^^^^^^^^^
	Changes in grop:
	
	+ Removed size unit setting from the preferences dialog (now sizes are
	  always displayed in "human readable" format).
	+ Removed command line option -L.
	+ Moved items in menu "View" to the "Preferences" dialog.
	+ Removed option to enable/disable the tooltips in Preferences.
	+ Removed option to enable/disable the rules hint (now they are always
	  enabled).
	+ Upgraded to GTKMM >= 2.12
	+ bugfix: Avoid bzip2ing of the bzip2 executable or gzipping of the gzip
	  executable.
	+ "Select all / unselect all" in the Edit menu.

	Other changes:
