@@ -4,6 +4,7 @@ svn
 	  package, both in porg and grop. Now shared files are never removed,
 	  as it ougth to be.
 	+ Disabled support for missing files.
+	+ porg: Don't allow use of -aU to remove all packages from the database.
 	+ grop: Removed support for gzip/bzip and stripping of libraries.
 	+ grop: Replaced menu option "Unselect all" by the more standard 
 	  "Invert selection" on the files popup menu.
